--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <!-- Title -->
   <section id="title" class="gradient-background">
     <div class="container col-xxl-8 px-4 pt-5">
-      <div class="row flex-lg-row-reverse align-items-center g-5 pt-5">
-        <div class="col-10 col-sm-8 col-lg-6">
+      <div class="row flex-lg-row-reverse justify-content-center justify-content-lg-start align-items-center g-5 pt-5">
+        <div class="col-10 col-sm-8 col-lg-6 d-flex justify-content-center d-lg-block">
           <img src="./images/iphone.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" height="500" loading="lazy">
         </div>
         <div class="col-lg-6">
-          <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Meet new and interesting dogs nearby.</h1>
-          <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+          <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3 text-center text-lg-start">Meet new and interesting dogs nearby.</h1>
+          <div class="d-grid gap-2 d-flex d-lg-block justify-content-center mb-sm-3 mb-3 mb-lg-0">
             <button type="button" class="btn btn-light me-md-2 btn-lg px-4"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
               class="bi bi-apple mb-1" viewBox="0 0 16 16">
 <path
@@ -124,7 +124,7 @@
         <h1 class="display-4 fw-normal text-body-emphasis">A Plan for Every Dog's Needs</h1>
         <p class="fs-5 text-body-secondary">Simple and affordable price plans for you and your dog.</p>
       </div>
-      <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+      <div class="row row-cols-1 row-cols-lg-3 mb-3 text-center">
         <div class="col">
           <div class="card mb-4 rounded-3 shadow-sm">
             <div class="card-header py-3">
